# esp32-pocketwatch

./: .gitignore  README.md
components/brookesia_app_squareline_demo/: CMakeLists.txt  esp_brookesia_app_squareline_demo.cpp  esp_brookesia_app_squareline_demo.hpp
components/sensorlib/: CMakeLists.txt
main/: idf_component.yml  main.cpp
